--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,38 @@ header {
   box-shadow: 0px 2px 10px -5px rgba(21,6,5,1);
 }
 
+main.photos {
+  padding: 10px;
+  display: grid;
+  grid-gap: 2px;
+  grid-auto-rows: 100px;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-auto-flow: dense;
+}
+
+img.image-grid {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.image-container {
+  position: relative;
+}
+
+.wide {
+  grid-column: span 2;
+}
+
+.tall {
+  grid-row: span 2;
+}
+
+.big {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
 a {
   text-decoration: none;
 }
