--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,30 @@ main.cart-page {
 .cart-page > h1 {
   text-align: center;
 }
+
+.favorite {
+  color: var(--red);
+  font-size: 1.2rem;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  cursor: pointer;
+}
+
+.cart {
+  color: var(--blue);
+  font-size: 1.2rem;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+}
+
+.ri-heart-fill {
+  opacity: .7;
+}
+
+.ri-delete-bin-line, .ri-delete-bin-fill {
+  font-size: 1.3em;
+  cursor: pointer;
+}
