--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,18 @@ main.cart-page {
   text-align: center;
 }
 
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.cart-item img {
+  margin-right: auto;
+  margin-left: 10px;   
+}
+
 .favorite {
   color: var(--red);
   font-size: 1.2rem;
@@ -102,4 +114,29 @@ main.cart-page {
 .ri-delete-bin-line, .ri-delete-bin-fill {
   font-size: 1.3em;
   cursor: pointer;
+}
+
+.cart-page .total-cost {
+  text-align: right;
+  font-size: 1.3em;
+}
+
+.cart-page div.order-button {
+  display: flex;
+  justify-content: center;
+}
+
+div.order-button > button {
+  border-color: var(--black);
+  cursor: pointer;
+  padding: 15px;
+  transition: all .2s ease-in-out;
+}
+
+div.order-button > button:focus {
+  outline: none;
+}
+
+div.order-button > button:disabled {
+  border-color: lightgray;
 }
